# pdf_maker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/api/: home.py  sample.py
app/schema/: sample.py
app/tests/: home_test.py  sample_test.py
app/utils/: pdf_generator.py  tools.py
templates/project_template/: home.html  teapot.html
templates/sample/ticket/: index.html  main.css
