[tool.poetry]
name = "simple-pdf-gen"
version = "0.1.0"
description = ""
authors = ["Erfan <69160698+Metal-Bat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
jinja2 = "^3.1.2"
pydantic = "^2.4.2"
pytest = "^7.4.3"
httpx = "^0.25.0"
uvicorn = "^0.23.2"
weasyprint = "^60.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
